--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@vue/babel-preset-app": "3.11.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-danger-remove-unused-import": "^1.1.2",
     "cross-env": "5.2.0",
