--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@gaoding/editor-ui": "0.11.24",
     "@gaoding/editor-utils": "1.0.13",
     "@handsontable/vue": "4.1.0",
+    "core-js": "^3.2.1",
     "handsontable": "7.1.1",
     "lodash": "4.17.15",
     "onecolor": "3.1.0",
