--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@vue/babel-preset-app": "3.11.0",
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-danger-remove-unused-import": "^1.1.2",
@@ -25,6 +26,8 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "3.0.0",
+    "postcss-mixins": "^6.2.2",
+    "postcss-nested": "^4.1.2",
     "rimraf": "3.0.0",
     "terser-webpack-plugin": "1.4.1",
     "url-loader": "2.1.0",
