--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,12 @@ before_script:
 script:
   - npm run build
 
+
+before_deploy:
+  # Set up git user name and tag this commit
+  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+  - git tag $TRAVIS_TAG
+
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
