chore: push tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_deploy:
   # Set up git user name and tag this commit
   - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - git tag $TRAVIS_TAG
-  - git push --tags
+  - git push --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git
 
 deploy:
   provider: releases
