--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,7 @@ script:
 before_deploy:
   - export VERSION_TAG=`node -p "require('./package.json').version"`
   - git tag $VERSION_TAG
-  - git add ./out
-  - git push -f https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git `npm version patch -m "%s [ci skip]"` # 打 Tag，发布到 Github Release, 使用 [ci skip] 调过 CI， 防止死循环
+  - git add ./out -m "[skip travis] Release" # 防止死循环
   - git push -f --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git HEAD:master #将新版本文件推送回 Github
 
 deploy:
