--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ script:
 before_deploy:
   - export VERSION_TAG=`node -p "require('./package.json').version"`
   - git tag $VERSION_TAG
-  - git add ./out -m "[skip travis] Release" # 防止死循环
+  - git add ./out
+  - git commit -m "[skip travis] Release" # 防止死循环
   - git push -f --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git HEAD:master #将新版本文件推送回 Github
 
 deploy:
