--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "table",
-  "version": "0.1.8",
+  "version": "0.2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "author": {
     "name": "odyssey team"
   },
