--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "table",
-  "version": "0.2.0",
+  "name": "@yudan-inc/table",
+  "version": "0.2.1",
   "publishConfig": {
     "access": "public"
   },
