--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,21 @@ before_script:
   - git config --global user.name "yudan"
   - git config --global user.email "yudan@gaoding.com"
   - export VERSION_TAG=`node -p "require('./package.json').version"`
+  - export PKG_NAME=`node -p "require('./package.json').version"`
 
 script:
   - npm run build
   - git add ./out
   - git commit -m "[skip travis] Release" # 防止死循环
-  - git tag $VERSION_TAG
-  - git push -f --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git HEAD:master #将新版本文件推送回 Github
+  - git tag $VERSION_TAG # jsDelivr 按 tag 更新
+  - git push -f --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git HEAD:master # 将新版本文件推送回 Github
 
 deploy:
   provider: npm
   email: "yudan@gaoding.com"
   api_key: ${PUBLISH_TOKEN}
   skip_cleanup: true
+
+after_deploy:
+  - curl https://cdn.jsdelivr.net/gh/$TRAVIS_REPO_SLUG@$VERSION_TAG/out/index.js > temp.js # 刷新 CDN
+  - curl https://cdn.jsdelivr.net/npm/$PKG_NAME@$VERSION_TAG/out/index.js > temp.js # 刷新 CDN
