--- a/.travis.yml
+++ b/.travis.yml
@@ -17,25 +17,24 @@ branches:
   only:
     - master
 
-jobs:
-  include:
-#    - stage: test                # naming the Tests stage
-#      name: "Unit Tests"            # names the first Tests stage job
-#      script: echo "Unit Tests"
+script:
+  # if pull request, todo 检查 PR 格式
+  - if [ ! "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      echo "check pr";
+    fi
 
-    - stage: Deploy
-      name: "Deploy to Github"
-      script:
-        - npm run build
-        - git add ./out
-        - git commit -m "[skip travis] Release" # 防止死循环
-        - git tag $VERSION_TAG # jsDelivr 按 tag 更新
-        - git push -f --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git HEAD:master # 将新版本文件推送回 Github
-        - curl https://cdn.jsdelivr.net/gh/${TRAVIS_REPO_SLUG}@$VERSION_TAG/out/index.js > temp.js # 刷新 CDN
-        - npm publish
-        - curl https://cdn.jsdelivr.net/npm/$PKG_NAME@$VERSION_TAG/out/index.js > temp.js # 刷新 CDN
+  # todo 运行测试
+  - echo "Run tests"
 
-stages:
-#  - test
-  - name: deploy
-    if: branch = master
+  - npm run build
+
+  # direct push to master
+  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then
+      git add ./out &&
+      git commit -m "[skip travis] Release" && # 防止死循环
+      git tag $VERSION_TAG &&# jsDelivr 按 tag 更新
+      git push -f --tags https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git HEAD:master && # 将新版本文件推送回 Github
+      curl https://cdn.jsdelivr.net/gh/${TRAVIS_REPO_SLUG}@$VERSION_TAG/out/index.js > temp.js && # 刷新 CDN
+      npm publish &&
+      curl https://cdn.jsdelivr.net/npm/$PKG_NAME@$VERSION_TAG/out/index.js > temp.js; # 刷新 CDN
+    fi
