--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config webpack.config.js",
     "start": "npm run dev",
-    "build": "rimraf ./out && cross-env NODE_ENV=production webpack --progress --color --bail --config ./webpack.config.js",
+    "build": "rimraf ./out && cross-env NODE_ENV=production webpack --color --bail --config ./webpack.config.js",
     "analyzer": "cross-env ANALYZER=true npm run build",
     "build:publish": "cross-env PUBLISH=true npm run build"
   },
