--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/runtime": "7.5.5",
     "@vue/babel-preset-app": "3.11.0",
     "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
     "babel-loader": "8.0.6",
     "babel-plugin-danger-remove-unused-import": "^1.1.2",
