--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "5.2.0",
     "css-loader": "3.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "git-remote-origin-url": "^3.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "3.0.0",
