--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "7.5.5",
     "@vue/babel-preset-app": "3.11.0",
+    "ali-oss": "^6.1.1",
     "autoprefixer": "^9.6.1",
     "axios": "^0.19.0",
     "babel-core": "^6.26.3",
@@ -27,7 +28,6 @@
     "cross-env": "5.2.0",
     "css-loader": "3.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "git-remote-origin-url": "^3.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "3.0.0",
